test/functions/bradc/intents/intents-strings.error2.good
intents-strings.chpl:12: In function 'bar':
intents-strings.chpl:15: error: illegal lvalue in assignment
intents-strings.chpl:68: Function 'bar' instantiated as: bar(x: string)
